--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -38,6 +38,19 @@ vfat	& 1 to 4		& 0 to 3\cr
 strip	& 0 to 127		& -\cr\bln
 }
 
+\iffalse
+1200  &     0.514  &    24.140  &   214.6077 &   -0.707 &    0.707 \cr\ln
+1201  &    -0.514  &    24.140  &   214.6123 &    0.707 &    0.707 \cr\ln
+1202  &     0.514  &    24.140  &   214.6167 &   -0.707 &    0.707 \cr\ln
+1203  &    -0.514  &    24.140  &   214.6213 &    0.707 &    0.707 \cr\ln
+1204  &     0.514  &    24.140  &   214.6257 &   -0.707 &    0.707 \cr\ln
+1205  &    -0.514  &    24.140  &   214.6303 &    0.707 &    0.707 \cr\ln
+1206  &     0.514  &    24.140  &   214.6347 &   -0.707 &    0.707 \cr\ln
+1207  &    -0.514  &    24.140  &   214.6393 &    0.707 &    0.707 \cr\ln
+1208  &     0.514  &    24.140  &   214.6437 &   -0.707 &    0.707 \cr\ln
+1209  &    -0.514  &    24.140  &   214.6483 &    0.707 &    0.707 \cr\ln
+\fi
+
 \section[rp measurement]{Proton Measurement with Roman Pot detectors}
 
 A collision takes place (the vertex is) in
