fast simulation, elegent
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@3967 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -662,13 +662,9 @@ iteration 2	& $\downarrow$	\cr
 
 In the previous section the errors of the algorithm were discussed. To support our hypotheses we will use Monte-Carlo simulations now. But before, we will briefly review how these simulations are performed and evaluated.
 
-Fast simulation. Random tracks generated at $z=217\un{m}$ (station 12 used). Slopes generated with gauss distribution with $\si$ either $0.1\un{mrad}$ (realistic scenario\TODO{reference}) or $10\un{mrad}$ (the highest angle that can be detected simultaneously in both units). Intercepts generated with either uniform distribution on $ -20\un{mm} < x, y < +20\un{mm}$ or Gauss distribution with $\si_x = 6\un{mm}$ and $\si_y = 8\un{mm}$. The latter distribution represents a more realistic scenario, where tracks cumulate close to the beam. The quoted RMS have been chosen to approximately match the experimental distributions.
-
-Theoretical hits of such tracks are calculated according to \Eq{local track,global to local,full measurement}. The charge-sharing effects are simplified to the creation of one and two-strip clusters, as shown in \Fg{fast simulation scheme}. This effectively means that, if the theoretical hit falls in a blue region, its position is rounded to the nearest dash-dotted line, if it falls in a white region, the position is rounded to the nearest strip. One-strip hits were assigned the error or $P/\sqrt{12}\approx 19\un{\mu m}$. Regarding the uncertainty of double-strip hits, we have made two sorts of simulations -- with full error $P/\sqrt{12}$ and with reduced error $P/\sqrt{4\cdot12}$. We will show (\Fg{al syst err pitch}) that the reduced errors violate the assumptions \Er{pitch error model}. Thus, later on, full error simulations will be meant, unless specified differently.
+Since full Geant4 would take an enormous time, we used a simplified fast simulation which is described in \Sc{fast simu}. Random tracks were generated at $z=217\un{m}$ (station 12 used). Their slopes were generated with gauss distribution with $\si$ either $0.1\un{mrad}$ (realistic scenario\TODO{reference}) or $10\un{mrad}$ (the highest angle that can be detected simultaneously in both units). Their intercepts were generated with either uniform distribution on $ -20\un{mm} < x, y < +20\un{mm}$ or Gauss distribution with $\si_x = 6\un{mm}$ and $\si_y = 8\un{mm}$. The latter distribution represents a more realistic scenario, where tracks cumulate close to the beam. The quoted RMS have been chosen to approximately match the experimental distributions. With the exception of the study presented in \Fg{}, the nominal pitch of $66\un{\mu m}$, \pmt{dscrWidth}$=10\un{\mu m}$ and \pmt{dscReduceUncertainty} = False were used. We will show (\Fg{al syst err pitch}) that the reduced double-strip cluster errors violate the assumptions \Er{pitch error model}.
 
 \TODO{We haven't used G4 as it would take too long time. What difference may one expect compared to the G4 simulations/real data?}
-
-\fig{fig/pdf/fast_simulation_scheme.pdf}{fast simulation scheme}{One and two-strip cluster regions as used in the fast simulation. The solid lines represent the strip centers, the dash-dotted lines mark the half way between the strips. The blue areas correspond to the double-strip-cluster regions, the white ones to the regions where one-strip clusters are created.}
 
 The simulations could have been run with the pitch rounding on or off (the rounding in \Eq{full measurement} applied or not). Also, the $\ga$ parameters could have been calculated from the fitted track parameters (biased) or from the original generated track (non-biased). While the combination with pitch rounding on and biased parameters corresponds to the \em{real} alignment application, the combination with no pitch rounding and non-biased parameters corresponds to the \em{reference} results. There only the negligible rotation linearization error is present. The reference result was cross-checked with the \em{ideal} result that follows from \Eq{cnst aux7,cnst aux8}:
 \eqref{\vec\ch_{\rm ideal} = \left[ 1 - \mat E (\mat C^\T \mat E)^{-1} \mat C^\T \right] \vec\ch^0 + \mat E (\mat C^\T \mat E)^{-1} \vec V\ .}{ideal result}
@@ -697,7 +693,7 @@ This was just an example, for other conditions and settings the results confirm 
 %Pitch rounding effect is different for every seed while the reduced ms cluster error one is the same for every seed.
 That is why we will always use the non-reduced uncertainties in all following simulations and experimental data analyses.
 
-\fig{fig/pdf/al_syst_err_pitch.pdf}{al syst err pitch}{The systematic error in read-out shifts as a function of the detector pitch. The error shown in the r.h.s.{} plot is due to the use of the reduced multi-strip-cluster uncertainties. Every line corresponds to one plane in near top RP. The plots for rotations about $z$ look likewise in the scale from $-0.5$ to $0.5\un{\mu m}$. The size of the double-strip-cluster region (see \Fg{fast simulation scheme}) was kept at $50\percent$ of the pitch. The vertical dotted line marks the actual pitch.
+\fig{fig/pdf/al_syst_err_pitch.pdf}{al syst err pitch}{The systematic error in read-out shifts as a function of the detector pitch. The error shown in the r.h.s.{} plot is due to the use of the reduced multi-strip-cluster uncertainties. Every line corresponds to one plane in near top RP. The plots for rotations about $z$ look likewise in the scale from $-0.5$ to $0.5\un{\mu m}$. The size of the double-strip-cluster region (see \Fg{sr fast simulation scheme}) was kept at $50\percent$ of the pitch. The vertical dotted line marks the actual pitch.
 %it3 - precise3
 }
 
