--- a/2010/thesis/appendices.tex
+++ b/2010/thesis/appendices.tex
@@ -1,3 +1,4 @@
+\iffalse
 \chapter{Statistics}
 
 \section[stat estim]{Mean, variance, etc.}
@@ -34,7 +35,7 @@ See e.g. \bref{barlow}, Eq.~(8.5) on page 150.
 \eqref{\hbox{p--value}(\chi^2, N_{\rm df}) = \int_{\chi^2}^{+\infty} P_{\chi^2}(z, N_{\rm df})\ \d z}{p-value}
 
 P--values shall be uniformly distributed on $\langle 0, 1\rangle$. $p\to 1$ means too low $\chi^2$, while $p\to 0$ means too high $\chi^2$.
-
+\fi
 
 \chapter{Optics details}
 
@@ -68,6 +69,7 @@ Summary of key optics, if really needed...
 125  &     0.3  &     0.304  &    -3.294  &    -0.0  &    19.536  &    -4.163  &    -0.095  \cr\ln
 }
 
+\iffalse
 \chapter{TOTEM Software}
 
 \> the technical aspects of my SW work
@@ -77,3 +79,4 @@ Summary of key optics, if really needed...
 \> TOTEM Monitor
 
 \> TOTEM DQM
+\fi
