--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -1,6 +1,6 @@
 \chapter{Elastic scattering of protons}
 
-\section{Hadronic models}
+\section[el models]{Hadronic models}
 
 \em{The model of Islam et al.}
 
@@ -21,7 +21,10 @@
 
 \bref{bh99}
 
-\section{Coulomb interference}
+\section[el coulomb]{Coulomb interference}
+
+\eqref{}{el WY}
+\eqref{}{el KL}
 
 \section{Predictions for the LHC}
 
