--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -414,6 +414,10 @@
 }
 
 
+@Url{elegent,
+	title="Elegent TWiki page",
+	url = "https://twiki.cern.ch/twiki/bin/view/TOTEM/CompElegent"
+}
 
 #-------------------------------------------- OTHER -------------------------------------------------
 
