--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -5,6 +5,8 @@
 
 \input references.tex
 
+\pdfcatalog{/PageMode /UseOutlines}
+
 \let\BiggerFonts\SetFontSizesXII
 \let\NormalFonts\SetFontSizesX
 \let\SmallerFonts\SetFontSizesVIII
