--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -19,12 +19,38 @@
 
 \em{The model of Block and Halzen}
 
+
 \bref{bh99}
+
+\section[el pred]{Predictions for the LHC}
+
+\eqref{B(t) = {\d\over \d t} |F^{\rm N}|^2}{el B}
+\eqref{\rh(t) = {\Re F^{\rm N}\over \Im F^{\rm N}}}{el rh}
+
+\fig{fig/pdf/el_mod_dsdt_large.pdf}{el mod dsdt large}{Differential cross-section as predicted by the four models.}
+
+\fig{fig/pdf/el_mod_dsdt_narrow.pdf}{el mod dsdt narrow}{Differential cross-section as predicted by the four models.}
+
+\fig{fig/pdf/el_mod_B.pdf}{el mod B}{The elastic slope as predicted by the four models.}
+
+\fig{fig/pdf/el_mod_phase.pdf}{el mod phase}{The elastic amplitude phase as predicted by the four models.}
+
+\fig{fig/pdf/el_mod_rho.pdf}{el mod rho}{The $\rho$ parameter as predicted by the four models.}
 
 \section[el coulomb]{Coulomb interference}
 
-\eqref{}{el WY}
-\eqref{}{el KL}
+\eqref{F^{\rm C+N}_{\rm WY} = }{el WY}
+\eqref{F^{\rm C+N}_{\rm KL} = }{el KL}
 
-\section{Predictions for the LHC}
+
+\eqref{R(t) = {|F^{\rm \rm C+N}_{\rm KL}|^2 - |F^{\rm C+N}_{\rm WY}|^2 \over |F^{\rm C+N}_{\rm KL}|^2}}{el R}
+\eqref{Z(t) = {|F^{\rm \rm C+N}_{\rm KL}|^2 - |F^{\rm C+N}_{\rm PH}|^2 - |F^{\rm C+N}_{\rm PC}|^2\over |F^{\rm C+N}_{\rm KL}|^2}}{el Z}
+
+\fig{fig/pdf/el_mod_Z.pdf}{el mod Z}{The importance of the interference term (see \Eq{el Z}) as a function of $t$.}
+
+\fig{fig/pdf/el_mod_R.pdf}{el mod R}{The difference between WY and KL formulae as a function of $t$.}
+
+Eq.~2-7 (page 14) in ATLAS ALFA TDR \bref{alfa} is wrong.
+
+\section[el impact]{Impact parameter analyses}
 
