--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -200,13 +200,53 @@
 
 #------------------------------------------ ELASTIC THEORY ------------------------------------------
 
-@Article{cahn82,
-		author="R. Cahn",
-		title="Coulombic - hadronic interference in an eikonal model",
-		journal="Zeit. Phys.",
-		volume="C15",
-		year="1982",
-		pages="253"
+@Article{bethe58,
+     author    = "Bethe, H. A.",
+     title     = "{Scattering and polarization of protons by nuclei}",
+     journal   = "Annals Phys.",
+     volume    = "3",
+     year      = "1958",
+     pages     = "190-240",
+     doi       = "10.1016/0003-4916(58)90017-4",
+     SLACcitation  = "%%CITATION = APNYA,3,190;%%"
+}
+
+@Article{locher67,
+	title = "Relativistic treatment of structure in the Coulomb interference problem",
+	journal = "Nuclear Physics B",
+	volume = "2",
+	number = "5",
+	pages = "525 - 531",
+	year = "1967",
+	note = "",
+	issn = "0550-3213",
+	doi = "DOI: 10.1016/0550-3213(67)90188-5",
+	url = "http://www.sciencedirect.com/science/article/B6TVC-472T6D3-2H7/2/7dbce605d1a800435973054215f10476",
+	author = "M. P. Locher"
+}
+
+@Article{rix66,
+  title = {Separation of Strong and Electromagnetic Effects in Charged-Particle Scattering},
+  author = {Rix, J.  and Thaler, R. M.},
+  journal = {Phys. Rev.},
+  volume = {152},
+  number = {4},
+  pages = {1357--1363},
+  numpages = {6},
+  year = {1966},
+  month = {Dec},
+  doi = {10.1103/PhysRev.152.1357},
+  publisher = {American Physical Society}
+}
+
+@Article{islam67,
+      author         = "Islam, M.M.",
+      title          = "{Bethe's Formula for Coulomb-Nuclear Interference}",
+      journal        = "Phys.Rev.",
+      volume         = "162",
+      pages          = "1426-1428",
+      doi            = "10.1103/PhysRev.162.1426",
+      year           = "1967",
 }
 
 @Article{wy68,
@@ -218,6 +258,15 @@
      pages     = "1413-1422",
      doi       = "10.1103/PhysRev.172.1413",
      SLACcitation  = "%%CITATION = PHRVA,172,1413;%%"
+}
+
+@Article{cahn82,
+		author="R. Cahn",
+		title="Coulombic - hadronic interference in an eikonal model",
+		journal="Zeit. Phys.",
+		volume="C15",
+		year="1982",
+		pages="253"
 }
 
 @Article{kl94,
@@ -426,3 +475,26 @@
 	url = "http://en.wikipedia.org/"
 }
 
+@Article{alfa,
+      author       = "Jenni, Peter and Nordberg, Markus and Nessi, Marzio and
+                      Jon-And, Kerstin",
+      title        = "ATLAS Forward Detectors for Measurement of Elastic
+                      Scattering and Luminosity",
+      publisher    = "CERN",
+      address      = "Geneva",
+      series       = "Technical Design Report",
+      year         = "2008",
+	  % CERN-LHCC-2008-004
+}
+
+@Thesis{master,
+      author       = "Kaspar, Jan and Kundrat, V",
+      title        = "High energy diffraction processes - TOTEM experiment.
+                      oai:cds.cern.ch:1261396",
+      school       = "Prague, Charles University in Prague, Faculty of
+                      Mathematics and Physics",
+      address      = "Prague",
+      year         = "2005",
+      note         = "Presented on 2005",
+	  % CERN-THESIS-2010-062
+}
