--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -184,19 +184,19 @@
      SLACcitation  = "%%CITATION = HEP-PH/9809403;%%"
 }
 
-@Article{ppp03,
-     author    = "Petrov, V. A. and Predazzi, E. and Prokudin, A.",
-     title     = "{Coulomb interference in high-energy p p and anti-p p
-                  scattering}",
-     journal   = "Eur. Phys. J.",
-     volume    = "C28",
-     year      = "2003",
-     pages     = "525-533",
-     eprint    = "hep-ph/0206012",
-     archivePrefix = "arXiv",
-     doi       = "10.1140/epjc/s2003-01191-7",
-     SLACcitation  = "%%CITATION = HEP-PH/0206012;%%"
+@article{ppp02,
+      author         = "Petrov, V.A. and Prokudin, A.V.",
+      title          = "{The First three pomerons...}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C23",
+      pages          = "135-143",
+      doi            = "10.1007/s100520100838",
+      year           = "2002",
+      eprint         = "hep-ph/0105209",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
 }
+
 
 #------------------------------------------ ELASTIC THEORY ------------------------------------------
 
@@ -209,6 +209,17 @@
      pages     = "190-240",
      doi       = "10.1016/0003-4916(58)90017-4",
      SLACcitation  = "%%CITATION = APNYA,3,190;%%"
+}
+
+@Article{yennie61,
+      author         = "Yennie, D.R. and Frautschi, Steven C. and Suura, H.",
+      title          = "{The infrared divergence phenomena and high-energy
+                        processes}",
+      journal        = "Annals Phys.",
+      volume         = "13",
+      pages          = "379-452",
+      doi            = "10.1016/0003-4916(61)90151-8",
+      year           = "1961",
 }
 
 @Article{locher67,
@@ -260,6 +271,20 @@
      SLACcitation  = "%%CITATION = PHRVA,172,1413;%%"
 }
 
+@Article{islam76,
+	title = "Impact parameter representation from the Watson-Sommerfeld transform",
+	journal = "Nuclear Physics B",
+	volume = "104",
+	number = "3",
+	pages = "511 - 532",
+	year = "1976",
+	note = "",
+	issn = "0550-3213",
+	doi = "DOI: 10.1016/0550-3213(76)90115-2",
+	url = "http://www.sciencedirect.com/science/article/B6TVC-473DK4R-21/2/a3da8bad2cc2f3b1ddc090d5edb398df",
+	author = "M. M. Islam"
+}
+
 @Article{cahn82,
 		author="R. Cahn",
 		title="Coulombic - hadronic interference in an eikonal model",
@@ -267,6 +292,57 @@
 		volume="C15",
 		year="1982",
 		pages="253"
+}
+
+@Article{klk87,
+      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      title          = "{MOMENTUM TRANSFER DEPENDENCE OF THE ELASTIC AMPLITUDE
+                        PHASE IN HIGH-ENERGY HADRON SCATTERING}",
+      journal        = "Phys.Rev.",
+      volume         = "D35",
+      pages          = "1719-1722",
+      doi            = "10.1103/PhysRevD.35.1719",
+      year           = "1987",
+}
+
+@Article{klk88,
+      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      title          = "{ROLE OF THE PHASE AND IMPACT PARAMETER PICTURE OF anti-p
+                        p ELASTIC SCATTERING AT COLLIDER ENERGIES}",
+      year           = "1988",
+}
+
+@Article{kl89,
+      author         = "Kundrat, V. and Lokajicek, M.",
+      title          = "{CRITICAL COMMENTS ON THE STANDARD DESCRIPTION OF ELASTIC
+                        HADRON SCATTERING}",
+      journal        = "Phys.Lett.",
+      volume         = "B232",
+      pages          = "263-265",
+      doi            = "10.1016/0370-2693(89)91698-5",
+      year           = "1989",
+}
+
+@Article{klk89,
+      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      title          = "{Physical meaning of the phase of high-energy elastic
+                        scattering amplitude}",
+      journal        = "Czech.J.Phys.",
+      volume         = "B39",
+      pages          = "1245-1255",
+      doi            = "10.1007/BF01605324",
+      year           = "1989",
+}
+
+@Article{klk92,
+      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      title          = "{High-energy elastic hadron scattering in Coulomb and
+                        hadronic regions}",
+      journal        = "Phys.Rev.",
+      volume         = "D46",
+      pages          = "4087-4090",
+      doi            = "10.1103/PhysRevD.46.4087",
+      year           = "1992",
 }
 
 @Article{kl94,
@@ -281,16 +357,123 @@
      SLACcitation  = "%%CITATION = ZEPYA,C63,619;%%"
 }
 
-@Article{kl11,
-      author         = "Kaspar, Jan and Kundrat, Vojtech and Lokajicek, Milos and
-                        Prochazka, Jiri",
-      title          = "{Phenomenological models of elastic nucleon scattering
-                        and predictions for LHC}",
-      journal        = "Nucl.Phys.",
-      volume         = "B843",
-      pages          = "84-106",
-      doi            = "10.1016/j.nuclphysb.2010.09.020",
-      year           = "2011",
+@Article{kl96,
+      author         = "Kundrat, V. and Lokajicek, M.",
+      title          = "{Description of high-energy elastic hadron scattering in
+                        both the Coulomb and hadronic domains}",
+      journal        = "Mod.Phys.Lett.",
+      volume         = "A11",
+      pages          = "2241-2250",
+      doi            = "10.1142/S021773239600223X",
+      year           = "1996",
+}
+
+@Article{kopeliovich01,
+     author    = "Kopeliovich, B. Z. and Tarasov, A. V.",
+     title     = "{The Coulomb phase revisited}",
+     journal   = "Phys. Lett.",
+     volume    = "B497",
+     year      = "2001",
+     pages     = "44-48",
+     eprint    = "hep-ph/0010062",
+     archivePrefix = "arXiv",
+     doi       = "10.1016/S0370-2693(00)01316-2",
+     SLACcitation  = "%%CITATION = HEP-PH/0010062;%%"
+}
+
+@Article{klk02,
+      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      title          = "{Impact parameter structure derived from elastic
+                        collisions}",
+      journal        = "Phys.Lett.",
+      volume         = "B544",
+      pages          = "132-138",
+      doi            = "10.1016/S0370-2693(02)02481-4",
+      year           = "2002",
+}
+
+@Article{ppp03,
+     author    = "Petrov, V. A. and Predazzi, E. and Prokudin, A.",
+     title     = "{Coulomb interference in high-energy p p and anti-p p
+                  scattering}",
+     journal   = "Eur. Phys. J.",
+     volume    = "C28",
+     year      = "2003",
+     pages     = "525-533",
+     eprint    = "hep-ph/0206012",
+     archivePrefix = "arXiv",
+     doi       = "10.1140/epjc/s2003-01191-7",
+     SLACcitation  = "%%CITATION = HEP-PH/0206012;%%"
+}
+
+@Article{kl03,
+      author         = "Kundrat, V. and Lokajicek, M.",
+      title          = "{What can high-energy elastic scattering tell us about
+                        nucleon structure?}",
+      journal        = "Czech.J.Phys.",
+      volume         = "53",
+      pages          = "645-655",
+      doi            = "10.1023/A:1025307328791",
+      year           = "2003",
+}
+
+@Article{ppp05,
+	title = "Coulomb-nuclear interference in high-energy pp and  scattering",
+	journal = "Nuclear Physics B - Proceedings Supplements",
+	volume = "146",
+	number = "",
+	pages = "182 - 184",
+	year = "2005",
+	note = "Diffraction 2004",
+	issn = "0920-5632",
+	doi = "DOI: 10.1016/j.nuclphysbps.2005.02.089",
+	url = "http://www.sciencedirect.com/science/article/B6TVD-4G4F9R2-1J/2/5015b9e740bcf47abec7858f729d9265",
+	author = "V.A. Petrov and E. Predazzi and A. Prokudin"
+}
+
+@Article{kl05,
+      author         = "Kundrat, Vojtech and Lokajicek, Milos",
+      title          = "{Interference between Coulomb and hadronic scattering in
+                        elastic high-energy nucleon collisions}",
+      journal        = "Phys.Lett.",
+      volume         = "B611",
+      pages          = "102-110",
+      doi            = "10.1016/j.physletb.2005.02.025",
+      year           = "2005",
+      eprint         = "hep-ph/0412081",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
+@Article{kl05-2,
+      author         = "Kundrat, V. and Lokajicek, M.",
+      title          = "{Coulomb and hadronic scattering in elastic high-energy
+                        nucleon collisions}",
+      year           = "2005",
+      eprint         = "hep-ph/0510040",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
+@Article{kl07,
+      author         = "Kundrat, Vojtech and Kaspar, Jan and Lokajicek, Milos",
+      title          = "{To the theory of high-energy nucleon collisions}",
+      pages          = "273-278",
+      year           = "2007",
+}
+
+@Article{klv07,
+      author         = "Kundrat, Vojtech and Lokajicek, Milos and Vrkoc, Ivo",
+      title          = "{Limited validity of West and Yennie integral formula for
+                        elastic scattering of hadrons}",
+      journal        = "Phys.Lett.",
+      volume         = "B656",
+      pages          = "182-185",
+      doi            = "10.1016/j.physletb.2007.09.030",
+      year           = "2007",
+      eprint         = "0706.0827",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
 }
 
 @Article{kl09,
@@ -303,7 +486,7 @@
       primaryClass   = "hep-ph",
 }
 
-@article{kl09-models,
+@Article{kl09-models,
       author         = "Kaspar, Jan and Kundrat, Vojtech and Lokajicek, Milos",
       title          = "{Contemporary models of elastic nucleon scattering and
                         their predictions for LHC}",
@@ -313,11 +496,26 @@
       primaryClass   = "hep-ph",
 }
 
-@article{kl07,
-      author         = "Kundrat, Vojtech and Kaspar, Jan and Lokajicek, Milos",
-      title          = "{To the theory of high-energy nucleon collisions}",
-      pages          = "273-278",
-      year           = "2007",
+@Article{kl09-structure,
+      author         = "Lokajicek, Milos V. and Kundrat, V.",
+      title          = "{Elastic pp scattering and the internal structure of
+                        colliding protons}",
+      year           = "2009",
+      eprint         = "0909.3199",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
+@Article{kl11,
+      author         = "Kaspar, Jan and Kundrat, Vojtech and Lokajicek, Milos and
+                        Prochazka, Jiri",
+      title          = "{Phenomenological models of elastic nucleon scattering
+                        and predictions for LHC}",
+      journal        = "Nucl.Phys.",
+      volume         = "B843",
+      pages          = "84-106",
+      doi            = "10.1016/j.nuclphysb.2010.09.020",
+      year           = "2011",
 }
 
 #--------------------------------------------- MC GENERATORS ----------------------------------------
